[gd_scene load_steps=47 format=3 uid="uid://bc8ohnaqvtvpt"]

[ext_resource type="Texture2D" uid="uid://bwp7580e0r747" path="res://sprites/background sprites/Fall Background EXTENDED-6.png.png" id="1_3cuo6"]
[ext_resource type="Script" uid="uid://cw6tpvebw0hlh" path="res://scriptd/opening_scene.gd" id="1_k6lw7"]
[ext_resource type="Texture2D" uid="uid://c7nh4etjo482n" path="res://sprites/background sprites/Fall Background EXTENDED-4.png.png" id="2_k6lw7"]
[ext_resource type="Texture2D" uid="uid://chbg53v4y3308" path="res://sprites/background sprites/Fall Background EXTENDED-3.png.png" id="3_7igwe"]
[ext_resource type="Texture2D" uid="uid://boks80c2ui2iq" path="res://sprites/background sprites/Fall Background-2.png.png" id="4_0iuqt"]
[ext_resource type="Texture2D" uid="uid://m1uvnhrl6fw1" path="res://sprites/cutscene/FIre (cutscene) (1) (1).png" id="4_5ejm5"]
[ext_resource type="Texture2D" uid="uid://bctjm8s7qiv72" path="res://sprites/cutscene/FIre (cutscene) (1).png" id="5_wpum6"]
[ext_resource type="Texture2D" uid="uid://8itr22vuygt0" path="res://sprites/cutscene/Player On Log (cutscene).png" id="6_akv2y"]
[ext_resource type="Texture2D" uid="uid://kms33bi03rub" path="res://sprites/player animations/Player V3 idol RIGHT.png" id="6_lwios"]
[ext_resource type="Texture2D" uid="uid://cqxqktxxertef" path="res://sprites/cutscene/ENDLESS NIGHT LOGO.png" id="7_3ixmc"]
[ext_resource type="Texture2D" uid="uid://bruqndmp1mxsv" path="res://sprites/cutscene/Shooting Star.png" id="9_7igwe"]
[ext_resource type="Texture2D" uid="uid://dbd7owvc144c7" path="res://sprites/cutscene/New Piskel (5).png" id="9_akv2y"]
[ext_resource type="AudioStream" uid="uid://g28hvttwf0sq" path="res://everything else/Endless Night Intro DEMO (1).mp3" id="10_0iuqt"]
[ext_resource type="Texture2D" uid="uid://b5iba57sb4rjm" path="res://sprites/cutscene/New Piskel (6).png" id="10_3ixmc"]
[ext_resource type="FontFile" uid="uid://cbhl7de5qjlqo" path="res://everything else/Oleaguid/Oleaguid.ttf" id="13_3ixmc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y5rry"]
atlas = ExtResource("5_wpum6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ejm5"]
atlas = ExtResource("5_wpum6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwios"]
atlas = ExtResource("5_wpum6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcgpk"]
atlas = ExtResource("5_wpum6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uxnb"]
atlas = ExtResource("5_wpum6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_havtv"]
atlas = ExtResource("5_wpum6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfre5"]
atlas = ExtResource("5_wpum6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0akce"]
atlas = ExtResource("4_5ejm5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0akce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5rry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ejm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwios")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcgpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uxnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_havtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfre5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0akce")
}],
"loop": true,
"name": &"fire_out",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wnrni"]
atlas = ExtResource("6_akv2y")
region = Rect2(0, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlhfc"]
atlas = ExtResource("6_akv2y")
region = Rect2(40, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpqxh"]
atlas = ExtResource("6_akv2y")
region = Rect2(80, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juxuj"]
atlas = ExtResource("6_akv2y")
region = Rect2(0, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6gqd"]
atlas = ExtResource("6_akv2y")
region = Rect2(40, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rad4m"]
atlas = ExtResource("6_akv2y")
region = Rect2(80, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqnsc"]
atlas = ExtResource("6_akv2y")
region = Rect2(0, 64, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mxj8"]
atlas = ExtResource("6_akv2y")
region = Rect2(40, 64, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("6_akv2y")
region = Rect2(80, 64, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1uuy"]
atlas = ExtResource("6_akv2y")
region = Rect2(0, 96, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufgib"]
atlas = ExtResource("6_akv2y")
region = Rect2(40, 96, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvybd"]
atlas = ExtResource("6_akv2y")
region = Rect2(80, 96, 40, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_82m7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnrni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlhfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpqxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juxuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6gqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rad4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqnsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mxj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1uuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufgib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvybd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0iuqt"]
atlas = ExtResource("9_7igwe")
region = Rect2(0, 0, 65, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpum6"]
atlas = ExtResource("9_7igwe")
region = Rect2(0, 35, 65, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_akv2y"]
atlas = ExtResource("9_7igwe")
region = Rect2(0, 70, 65, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ixmc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iuqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpum6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akv2y")
}],
"loop": true,
"name": &"shoot_star",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_5ejm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.23921569)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.4886922]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("floor/PlayerV3IdolRight:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y5rry"]
resource_name = "flying_star"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 1.3, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.23921569), Color(1, 1, 1, 1), Color(1, 1, 1, 0.57254905), Color(1, 1, 1, 0.23137255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.4886922, 0.4223697]
}

[sub_resource type="Animation" id="Animation_lwios"]
resource_name = "lookaround"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("floor/PlayerV3IdolRight:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.73, 1.4666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwios"]
_data = {
&"RESET": SubResource("Animation_5ejm5"),
&"flying_star": SubResource("Animation_y5rry"),
&"lookaround": SubResource("Animation_lwios")
}

[sub_resource type="Theme" id="Theme_y5rry"]

[node name="Opening scene" type="Node2D"]
texture_filter = 1
script = ExtResource("1_k6lw7")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(1, -17)

[node name="floor2" type="Sprite2D" parent="Node2D"]
z_index = 1
position = Vector2(114, -23)
scale = Vector2(0.096, 0.096)
texture = ExtResource("4_0iuqt")

[node name="floor3" type="Sprite2D" parent="Node2D"]
z_index = 1
position = Vector2(-143, -21)
scale = Vector2(0.095, 0.095)
texture = ExtResource("4_0iuqt")

[node name="floor" type="Sprite2D" parent="Node2D"]
z_index = 2
position = Vector2(6.999999, -21)
scale = Vector2(0.095, 0.095)
texture = ExtResource("4_0iuqt")

[node name="fire" type="AnimatedSprite2D" parent="Node2D/floor"]
position = Vector2(214.2857, 171.42856)
scale = Vector2(8.89, 8.89)
sprite_frames = SubResource("SpriteFrames_0akce")
animation = &"fire_out"
autoplay = "default"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D/floor"]
position = Vector2(-228.57143, 114.28571)
scale = Vector2(13.02, 13.02)
sprite_frames = SubResource("SpriteFrames_82m7v")
autoplay = "default"
flip_h = true

[node name="PlayerV3IdolRight" type="Sprite2D" parent="Node2D/floor"]
visible = false
position = Vector2(-105.26315, 136.84212)
scale = Vector2(14.842105, 14.842105)
texture = ExtResource("6_lwios")
region_enabled = true
region_rect = Rect2(9.688072, 5.5577106, 13.493004, 26.768381)

[node name="back trees2" type="Sprite2D" parent="Node2D"]
z_index = -2
position = Vector2(103.00001, -69)
scale = Vector2(1.54, 1.54)
texture = ExtResource("3_7igwe")

[node name="back trees" type="Sprite2D" parent="Node2D"]
z_index = -2
position = Vector2(-95.00001, -70)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_7igwe")

[node name="back trees3" type="Sprite2D" parent="Node2D"]
z_index = -2
position = Vector2(6, -75)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_7igwe")

[node name="front trees2" type="Sprite2D" parent="Node2D"]
position = Vector2(-100, -76)
scale = Vector2(1.595, 1.595)
texture = ExtResource("2_k6lw7")

[node name="front trees" type="Sprite2D" parent="Node2D"]
position = Vector2(89, -77)
scale = Vector2(1.595, 1.595)
texture = ExtResource("2_k6lw7")

[node name="sky2" type="Sprite2D" parent="Node2D"]
z_index = -4096
position = Vector2(-95, -61)
scale = Vector2(1.585, 1.585)
texture = ExtResource("1_3cuo6")

[node name="sky" type="Sprite2D" parent="Node2D"]
z_index = -4096
position = Vector2(90, -60)
scale = Vector2(1.585, 1.585)
texture = ExtResource("1_3cuo6")

[node name="title" type="Sprite2D" parent="Node2D"]
z_index = 1405
position = Vector2(-8, -229)
scale = Vector2(1.405, 1.405)
texture = ExtResource("7_3ixmc")

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(4.0000005, 54)
scale = Vector2(0.221, 0.465)
texture = ExtResource("4_0iuqt")
region_enabled = true
region_rect = Rect2(0, 968.5346, 1920, 119.46539)

[node name="sky_extension" type="Sprite2D" parent="Node2D"]
position = Vector2(-96, -277)
scale = Vector2(1.655, 1.655)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="sky_extension2" type="Sprite2D" parent="Node2D"]
position = Vector2(93, -278)
scale = Vector2(1.65, 1.65)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="sky_extension3" type="Sprite2D" parent="Node2D"]
position = Vector2(93.00001, -245)
scale = Vector2(1.65, 1.65)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="sky_extension4" type="Sprite2D" parent="Node2D"]
position = Vector2(-97, -244)
scale = Vector2(1.65, 1.65)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="sky_extension5" type="Sprite2D" parent="Node2D"]
position = Vector2(-95, -212)
scale = Vector2(1.65, 1.65)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="sky_extension6" type="Sprite2D" parent="Node2D"]
position = Vector2(-94, -180)
scale = Vector2(1.65, 1.65)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="sky_extension7" type="Sprite2D" parent="Node2D"]
position = Vector2(87, -185)
scale = Vector2(1.65, 1.65)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="sky_extension8" type="Sprite2D" parent="Node2D"]
position = Vector2(92, -213.00002)
scale = Vector2(1.65, 1.65)
texture = ExtResource("1_3cuo6")
region_enabled = true
region_rect = Rect2(0, 0, 120, 22.230762)

[node name="cloud1" type="Sprite2D" parent="Node2D"]
position = Vector2(122, -165)
scale = Vector2(2.375, 2.03125)
texture = ExtResource("9_akv2y")

[node name="cloud2" type="Sprite2D" parent="Node2D"]
position = Vector2(102, -241.00003)
scale = Vector2(2.625, 2.84375)
texture = ExtResource("10_3ixmc")
flip_v = true

[node name="cloud3" type="Sprite2D" parent="Node2D"]
position = Vector2(-90, -227)
scale = Vector2(2.25, 1.96875)
texture = ExtResource("9_akv2y")
flip_h = true

[node name="cloud4" type="Sprite2D" parent="Node2D"]
position = Vector2(-139, -145.00002)
scale = Vector2(2.4375, 2.5)
texture = ExtResource("10_3ixmc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Node2D/cloud4"]
rect = Rect2(-10, -10, 20, 14.435)

[node name="Node2D" type="Node2D" parent="Node2D"]
visible = false
modulate = Color(1, 1, 1, 0.23921569)
position = Vector2(-4.0000005, -10.000001)
rotation = -0.4886922

[node name="shooting_star" type="AnimatedSprite2D" parent="Node2D/Node2D"]
position = Vector2(0, -110.365)
scale = Vector2(0.45, 0.45)
sprite_frames = SubResource("SpriteFrames_3ixmc")
animation = &"shoot_star"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Node2D/shooting_star"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_lwios")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-4, -206)
zoom = Vector2(2.56, 2.56)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_0iuqt")
parameters/looping = true

[node name="Button" type="Button" parent="."]
visible = false
z_index = 1
offset_left = -52.0
offset_top = -205.0
offset_right = 50.0
offset_bottom = -182.0
theme = SubResource("Theme_y5rry")
theme_override_colors/font_hover_color = Color(0.9490196, 0.9490196, 0, 1)
theme_override_fonts/font = ExtResource("13_3ixmc")
text = "Begin the night"

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = -181.0
offset_top = 52.0
offset_right = -45.0
offset_bottom = 101.0
scale = Vector2(0.785, 0.785)
theme_override_fonts/font = ExtResource("13_3ixmc")
text = "Hold left click to skip"

[connection signal="screen_exited" from="Node2D/cloud4/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
